--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <div class="container">
-        <input type="text" id="input-item"> <br>
+        <!-- <input type="text" id="input-item"> -->
+        <textarea id="myTextarea"></textarea><br>
         <button id="save-input">SAVE INPUT</button>
         <button id="save-btn">SAVE TAB</button>
         <button id="delete-all-Item">DELETE ALL</button>
