--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
     <title>Input tracker Chrome Extension</title>
 </head>
 <body>
-    <div class="container">
-        <!-- <input type="text" id="input-item"> -->
-        <textarea id="myTextarea"></textarea><br>
-        <button id="save-input">SAVE INPUT</button>
-        <button id="save-btn">SAVE TAB</button>
-        <button id="delete-all-Item">DELETE ALL</button>
-    </div>
-    <ul id="Item-list"></ul>
-    <script src="script.js"></script>
+    <section class="main-container">
+        <div class="container">
+            <textarea id="myTextarea"></textarea><br>
+            <button id="save-input">SAVE INPUT</button>
+            <button id="save-btn">SAVE TAB</button>
+            <button id="delete-all-Item">DELETE ALL</button>
+        </div>
+        <ul id="Item-list"></ul>
+    </section>
+        <script src="script.js"></script>
 </body>
 </html>
